--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Your Code
+        uses: actions/checkout@v2
+        
       - name: Check executable
         run: chmod +x ../../hello.sh
 
